# accurity_mcp

./: .env.example  .gitignore  CLAUDE.md  README.MD  docker-compose.yml  package-lock.json
.claude/: settings.json  settings.local.json
docs/: accurity-login.md  llama-docs.md
docs/swagger/: accurity.html  api-reference.md
mcp/: .env  Dockerfile  list_tools.py  pyproject.toml
mcp/src/accurity_mcp/: client.py  server.py
mcp/src/accurity_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/src/accurity_mcp/tools/: __init__.py  resources.py
mcp/tests/: test_client.py  test_tools.py
memory/: MEMORY.md
webapp/backend/: .dockerignore  Dockerfile  requirements.txt  run.py
webapp/backend/app/: __init__.py  agent.py  db.py  routes.py
webapp/frontend/: Dockerfile  index.html  package-lock.json  package.json  server.js  vite.config.js
webapp/frontend/src/: App.jsx  App.module.css  index.css
webapp/frontend/src/components/: ChatWindow.jsx  ChatWindow.module.css  InputBar.jsx  InputBar.module.css  MessageBubble.jsx  MessageBubble.module.css  ToolStatus.jsx  ToolStatus.module.css
webapp/frontend/src/hooks/: useChat.js
webapp/frontend/src/pages/: ChatPage.jsx
webapp/frontend/src/utils/: conversation.js
